--- a/spritepencil/page.css
+++ b/spritepencil/page.css
@@ -3,7 +3,7 @@ h1 {
 }
 @supports (-webkit-background-clip: text) {
     #title {
-        background: linear-gradient(#00D5B8 0%, #00D5B8 49.9%, #000 50.1%, #000 100%);
+        background: linear-gradient(#00D5B8 0%, #00D5B8 49.9%, var(--heading-text-color) 50.1%, var(--heading-text-color) 100%);
         background-attachment: fixed;
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
